--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,3 +10,9 @@ html {
 
 /* Write your solution here */
 
+@media all and (max-width: 1170px) and (min-width: 406px) {
+  
+  #monkey {
+    top: 0;
+  }
+}
