--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,3 +20,9 @@ html {
 
 /* Write your solution here */
 
+@media all and (max-width: 1090px) and (min-width: 642px) {
+  
+  #monkey {
+    top: -45px;
+  }
+}
